Updated sections Contacts and Team

--- a/public/index.html
+++ b/public/index.html
@@ -51,13 +51,13 @@
                     </a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#about"><span>About</span><i class="fa fa-info-circle fa-3"></i></a>
+                    <a class="page-scroll" href="#about"><span>About</span></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#medical-issues"><span>Medical issues</span><i class="fa fa-heart fa-3"></i></a>
+                    <a class="page-scroll" href="#medical-issues"><span>Medical issues</span></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#procedures"><span>Procedures</span><i class="fa fa-check fa-3"></i></a>
+                    <a class="page-scroll" href="#procedures"><span>Procedures</span></a>
                 </li>
                 <!--
                 <li>
@@ -65,10 +65,10 @@
                 </li>
                 -->
                 <li>
-                    <a class="page-scroll" href="#team"><span>Team</span><i class="fa fa-users fa-3"></i></a>
+                    <a class="page-scroll" href="#team"><span>Team</span></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contacts"><span>Contact</span><i class="fa fa-phone-square fa-3"></i></a>
+                    <a class="page-scroll" href="#contacts"><span>Contact</span></a>
                 </li>
             </ul>
 
@@ -113,7 +113,9 @@
                 </video>
             </section>
 
-            <section id="about" class="odd">
+            <section class="separator-section"></section>
+
+            <section id="about">
                 <div class="row">
                     <div class="col-md-3 col-md-offset-2 section-head"><span>About "Physiotherapy Bio Center"</span></div>
                 </div>
@@ -129,7 +131,7 @@
 
             <section class="separator-section"></section>
 
-            <section id="medical-issues" class="even">
+            <section id="medical-issues">
                 <div class="glass">
                     <div class="row">
                         <div class="col-md-3 col-md-offset-6 section-head"><span>Medical issues</span></div>
@@ -174,18 +176,18 @@
 
             <section class="separator-section"></section>
 
-            <section id="procedures" class="odd">
+            <section id="procedures">
                 <div class="row">
-                    <div class="col-md-3 col-md-offset-2 section-head"><span>Procedures</span></div>
+                    <div class="col-md-3 col-md-offset-1 section-head"><span>Procedures</span></div>
                 </div>
                 <div class="row content">
-                    <div class="col-md-6 col-md-offset-2">
+                    <div class="col-md-6 col-md-offset-1">
                         <ul>
                             <li>Electrotherapy</li>
                             <li>Ultrasonic therapy</li>
                             <li>Iontophoresis</li>
                             <li>Deep oscillation therapy</li>
-                            <li>Manual therapy - soft tissue techniques and mobilization of the spine and peripheral joints</li>
+                            <li title="Soft tissue techniques and mobilization of the spine and peripheral joints">Manual therapy</li>
                             <li>Kinesio taping</li>
                             <li>Acupuncture</li>
                             <li>Acupressure</li>
@@ -201,45 +203,110 @@
                 </div>
             </section>
 
-            <section id="team" class="odd">
-                <div class="row">
-                    <div class="col-md-3 col-md-offset-2 section-head"><span>Team</span></div>
-                </div>
-                <div class="row content">
+            <section class="separator-section"></section>
+
+            <section id="team">
+                <div class="dark-glass">
+                    <div class="row">
+                        <div class="col-md-3 col-md-offset-2 section-head"><span>Team</span></div>
+                    </div>
+                    <div class="row content">
+                        <div class="col-md-1 col-md-offset-2 person-img">
+                            <img src="img/person2.png">
+                        </div>
+                        <div class="col-md-6 person">
+                            <span class="person-name"><i class="fa fa-user"></i> Panagiotis Tsimplis</span>
+                            <span class="person-title"> - Master of Physiotherapy (Physiotherapy)
+                                <a href="mailto:p.tsimplis@pbioc.com"><i class="fa fa-envelope"></i> p.tsimplis@pbioc.com</a>
+                                <i class="fa fa-phone"></i> +359 887 71 72 76
+                            </span>
+                            <h2 class="person-education"><i class="fa fa-graduation-cap"></i> Education</h2>
+                            <ul>
+                                <li>2011 - Masters in Physiotherapy (Therapy in musculoskeletal dysfunctions) - NAV "C. Levski ", Sofia</li>
+                                <li>2010 - Bachelors of Physiotherapy (Physiotherapy) - NAV "C. Levski ", Sofia</li>
+                            </ul>
+                            <h2><i class="fa fa-certificate"></i> Additional Training Cources</h2>
+                            <ul>
+                                <li>Manual therapy</li>
+                                <li>Acupuncture</li>
+                                <li>Soft tissue mobilization techniques of the lumbar and lower limb (Soft-tissue mobilization - lower back and lower extremity)</li>
+                                <li>Manual mobilization of peripheral joints</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row content">
+                        <div class="col-md-1 col-md-offset-2 person-img">
+                            <img src="img/person.png">
+                        </div>
+                        <div class="col-md-6 person">
+                            <span class="person-name"><i class="fa fa-user"></i> Velina Kristeva</span>
+                            <span class="person-title"> - Master of Physiotherapy (Physiotherapy)
+                                <a href="mailto:p.tsimplis@pbioc.com"><i class="fa fa-envelope"></i> v.krasteva@pbioc.com</a>
+                                <i class="fa fa-phone"></i> +359 887 71 72 75
+                            </span>
+                            <h2 class="person-education"><i class="fa fa-graduation-cap"></i> Education</h2>
+                            <ul>
+                                <li>2011 - Masters in Physiotherapy (Therapy in musculoskeletal dysfunctions) - NSA "C. Levski ", Sofia</li>
+                                <li>2010 - Bachelors of Physiotherapy - NSA "C. Levski ", Sofia</li>
+                            </ul>
+                            <h2><i class="fa fa-certificate"></i> Additional Training Cources</h2>
+                            <ul>
+                                <li>Manual mobilization of peripheral joints</li>
+                                <li>Soft tissue mobilization techniques of the lumbar and lower limb (Soft-tissue mobilization - lower back and lower extremity)</li>
+                                <li>Mobilization with movement on the concept of Brian Mulligan</li>
+                                <li>Theraband - elastic resistance, proprioceptive training and myofascial relaxation in physical therapy and sports.</li>
+                                <li>Physical treatment of peripheral lymphoedema with flebo-leading lecturer Jean-Paul Belgrado. (Physical treatment of peripheral phlebo-lymphedema)</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </section>
 
-            <section id="contacts" class="odd text-center">
-                <!-- <div class="row"> -->
-                <div class="contact-section">
-                    <div class="container">
-                        <h2>Contact Us</h2>
-                        <div class="row" style="section-content">
-                            <div class="col-md-6">
-                                <table>
-                                    <tr>
-                                        <td><i class="fa fa-home fa-2x"></i></td>
-                                        <td>38 Architect Jordan Milanov str.</td>
-                                    </tr>
-                                    <tr>
-                                        <td><i class="fa fa-mobile fa-3x"></i></td>
-                                        <td>+359 887 717 276</td>
-                                    </tr>
-                                    <tr>
-                                        <td><a href="mailto:office@pbioc.com"><i class="fa fa-envelope-o fa-2x"></i></a></td>
-                                        <td><a href="mailto:office@pbioc.com">office@pbioc.com</a></td>
-                                    </tr>
-                                </table>
+            <section class="separator-section"></section>
+
+            <section id="contacts">
+                <div class="row">
+                    <div class="col-md-3 col-md-offset-2 section-head"><span>Contact Us</span></div>
+                </div>
+                <div class="row contacts-row content">
+                    <div class="col-md-2 col-md-offset-2">
+                        <div class="row">
+                            <div class="col-md-12 paragraph-title"><i class="fa fa-clock-o"></i> Hours</div>
+                        </div>
+                        <div class="row hours-row">
+                            <div class="col-md-12">
+                                <ul>
+                                    <li>Monday - Friday: 9:00 - 19:00</li>
+                                    <li>Saturday: 9:00 - 15:00</li>
+                                    <li>Sunday: day off</li>
+                                </ul>
                             </div>
-                            <div class="col-md-6">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.205991239886!2d23.33333689999999!3d42.6781787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa85af39f43bdb%3A0x764b661931f5dc2!2z0YPQuy4g4oCe0LDRgNGFLiDQmdC-0YDQtNCw0L0g0JzQuNC70LDQvdC-0LLigJwgMzgsIDExNjQg0KHQvtGE0LjRjw!5e0!3m2!1sbg!2sbg!4v1412811241353" width="100%" height="350" frameborder="0"></iframe>
-                              </div>
                         </div>
                     </div>
+
+                    <div class="col-md-3">
+                        <div class="row address-row">
+                            <div class="row">
+                                <div class="col-md-12 paragraph-title"><i class="fa fa-info"></i> Contact Info</div>
+                            </div>
+                            <div class="col-md-12">
+                                <ul>
+                                    <li><i class="fa fa-globe"></i> Sofia, 16A Zlaten Rog, 5th floor, Office 6</li>
+                                    <li><i class="fa fa-envelope"></i> <a href="mailto:contact@pbioc.com">contact@pbioc.com</a></li>
+                                    <li><i class="fa fa-phone"></i> +359 2 411 10 10</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.544249694516!2d23.319324099999996!3d42.671012400000016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa84557f797475%3A0x77d9d1716c128d21!2sulitsa+%22Zlaten+rog%22+16-%D0%90%2C+1407+Sofia!5e0!3m2!1sen!2sbg!4v1416190958329" width="100%" height="300" frameborder="0"></iframe></iframe>
+                    </div>
+                </div>
             </section>
 
             <!-- Footer -->
-            <footer class="even">
+            <footer>
                 <div class="container text-center">
                     <p class="paragraph-small">Copyright &copy; PBIOC 2014</p>
                 </div>
